--- a/_config.yml
+++ b/_config.yml
@@ -47,3 +47,5 @@ exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
 
 # Disqus (Set to your disqus id)
 disqus:         jekyll-tale
+
+$ bundle exec jekyll serve
